2008-11-12  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c (hildon_button_init):
	Make button images center-aligned by default

2008-11-12  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-gtk.c:
	* src/hildon-gtk.h: Fixed compilation problem with MAEMO_CHANGES
	activated, we have to think about how to deal with both defines
	MAEMO_GTK and MAEMO_CHANGES.

2008-11-12  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-app-menu-example.c (create_menu): Make all
	buttons finger size.

2008-11-11  Alejandro G. Castro	 <alex@igalia.com>

	Fixed the compilation without maemo gtk adding ifdefs with
	MAEMO_GTK define to the code, we have to check this version more
	carefully.

	* examples/Makefile.am: Added control to avoid some examples that
	just make sense with maemo gtk.

	* src/hildon-gtk.c:
	* src/hildon-gtk.h: Remove some functions that use the maemo gtk
	hildon modes with the define.

	* examples/hildon-edit-toolbar-example.c,
	(create_icon_view): Create the icon view without hildon-gtk
	helpers if we are not using maemo gtk.

	* src/hildon-touch-selector.c,
	(_create_new_column): Create the treeview without hildon-gtk
	helpers if we are not using maemo gtk.

2008-11-11  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pnnable-area.c,
	(hildon_pannable_area_dispose),
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_child_mapped),
	(hildon_pannable_area_add),
	(hildon_pannable_area_remove): Added code to control the position
	of the event_window when adding and removing children from the
	pannable. We have to raise the event window when the child is
	mapped.

	Fixes: NB#89811 (Not able to select first image thumbnail in multi
	selection mode using custom widget inside pannable)

2008-11-11  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump

2008-11-11  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.22]

	* NEWS: updates